--- a/source/components/header/menu/forms/index.sass
+++ b/source/components/header/menu/forms/index.sass
@@ -11,6 +11,8 @@
   transform: translate(100vw)
   padding:
     top: 3.6rem
+  height: 100%
+  overflow: auto
 
 .form__inner
   flex: 1
@@ -33,7 +35,7 @@
   display: none
   fill: $gray-color
   position: absolute
-  right: -1.7rem
+  right: -15px
   top: 0
 
 .form__form-elements
@@ -124,6 +126,7 @@
       color: $white-color
     padding:
       top: 0
+    height: auto
 
   .form__header
     margin:
