--- a/source/components/header/index.sass
+++ b/source/components/header/index.sass
@@ -44,6 +44,7 @@
   transform: translate(100%)
   transition: $common-transition-duration
   pointer-events: none
+  min-height: 280px
   &.active
     pointer-events: auto
     transform: translate(0)
@@ -105,6 +106,7 @@
     pointer-events: auto
     min-width: 0
     width: 100%
+    min-height: 0
     &.active
       box-shadow: none
       transform: none
